# clinikit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CITATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  roadmap.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md
docs/: conf.py  index.md  installation.md  modules.md  quickstart.md
examples/: quickstart.ipynb
scripts/: fetch_datasets.py
src/clinikit/: __init__.py  cli.py
src/clinikit/active_learning/: __init__.py  _loop.py
src/clinikit/audit/: __init__.py  _audit.py
src/clinikit/automl/: __init__.py  _runners.py
src/clinikit/calibration/: __init__.py  _calibrators.py
src/clinikit/cost_sensitive/: __init__.py  _cost.py
src/clinikit/cross_val/: __init__.py  _splitters.py
src/clinikit/curves/: __init__.py  _curves.py
src/clinikit/datasets/: __init__.py  _loaders.py
src/clinikit/datasets/data/: README.md
src/clinikit/diagnostics/: __init__.py  _diagnostics.py
src/clinikit/explainability/: __init__.py  _explain.py
src/clinikit/external_val/: __init__.py  _external.py
src/clinikit/governance/: __init__.py  _manifests.py
src/clinikit/leaderboard/: __init__.py  _leaderboard.py
src/clinikit/metrics/: __init__.py  _classification.py  _probabilistic.py
src/clinikit/modelcard/: __init__.py  _card.py
src/clinikit/models/: __init__.py  boundary_refine.py  class_conditional_imputer.py  cross_distribution_distiller.py  dialectical_ensemble.py  dual_view_cotrainer.py  error_aware_calibrator.py  hard_sample_weighted_ensemble.py  instance_adaptive_threshold.py  iterative_label_refiner.py  latent_subtype_router.py  monotonic_booster.py  rule_augmented.py  selective_classifier.py  subgroup_threshold.py
src/clinikit/monitor/: __init__.py  _drift.py
src/clinikit/plots/: __init__.py  _plots.py
src/clinikit/preprocessing/: __init__.py  _imputers.py  _indicators.py  _scalers.py
src/clinikit/protocols/: __init__.py  _base.py  _protocols.py
src/clinikit/report/: __init__.py  _report.py
src/clinikit/report/templates/: default.html.j2
src/clinikit/reproducibility/: __init__.py  _environment.py  _hashing.py  _manifest.py
src/clinikit/statistics/: __init__.py  _tests.py
src/clinikit/synthetic/: __init__.py  _synth.py
src/clinikit/thresholds/: __init__.py  _strategies.py
src/clinikit/time_split/: __init__.py  _splits.py
tests/: conftest.py  test_active_learning.py  test_audit.py  test_automl.py  test_calibration.py  test_cli.py  test_cost_sensitive.py  test_cross_val.py  test_curves.py  test_datasets.py  test_diagnostics.py  test_explainability.py  test_external_val.py  test_governance.py  test_leaderboard.py  test_metrics.py  test_modelcard.py  test_models_g1.py  test_models_g2.py  test_models_g3.py  test_models_g4.py  test_monitor.py  test_plots.py  test_preprocessing.py  test_protocols.py  test_report.py  test_reproducibility.py  test_sklearn_compatibility.py  test_smoke.py  test_statistics.py  test_synthetic.py  test_thresholds.py  test_time_split.py
